syntax = "proto3";
option go_package = "hello_client/pb";

package pb;

//定义服务
service Greeter{
  // 定义方法
  rpc SayHello (HelloRequest) returns (HelloResponse){}

  //服务端返回流式数据
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);

  //客户端发送流式数据
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);

  //双向流式发送数据
  rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
}

//定义消息
message HelloRequest{
  string name = 1;  //字段的序号
}

message HelloResponse{
  string reply = 1;
}

